--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <header class="navegacao">
         <nav class="navegacao-ancoras">
             <a class="ancora" href="index.html">Home</a>
-            <a class="ancora" href="">Recordações</a>
+            <a class="ancora" href="recordacoes.html">Recordações</a>
         </nav>
     </header>
     <main class="principal">
     <section class="conteudo">
         <h1 class="primeiro-titulo">Esta página é um presente especial<br>
-                                    para você: Feliz Aniversário!</h1>
+        para você: Feliz Aniversário!</h1>
         <h2 class="segundo-titulo">Querida amiga, Laura</h2><br>
         <p class="paragrafo">Hoje é o dia de celebrar você, uma pessoa incrível que ilumina 
         a vida de todos ao redor com seu sorriso, sua força e seu coração 
